tests/files/lexer_tests/should_fail/015.cmdr
// Illegal character in string (ascii 15)
var = '';